service.yaml
apiVersion: v1
kind: Service
metadata:
  name: $SERVICE_NAME
  labels:
    app: $SERVICE_NAME
spec:
  type: NodePort
  ports:
  - port: $SERVICE_PORT
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: $SERVICE_NAME
